config/example/gateway.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: example-gateway
  annotations:
    "external-dns.alpha.kubernetes.io/hostname": DNS_HOSTNAME
spec:
  gatewayClassName: default-consul-gateway-class
  listeners:
  - protocol: HTTPS
    hostname: DNS_HOSTNAME
    port: 443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
        - name: gateway-production-certificate
